--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,12 @@ input [type="radio"].visually-hidden {
 	border: none;
 }
 
+.button-social img {
+	width: 21px;
+	height: 21px;
+	margin-top: 28px;
+}
+
 
 
 /*--------------- Навигация (главная) ---------------*/
@@ -1517,7 +1523,8 @@ input [type="radio"].visually-hidden {
 
 .map iframe {
 	position: absolute;
-	left: 0;
+	left: 50%;
+	margin-left: -720px;
 }
 
 .contacts {
